feat: user logic
