# docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Gin swagger",
-        "title": "Gin swagger",
+        "description": "CutURL api server",
+        "title": "CutURL API",
         "contact": {},
         "version": "1.0"
     },
@@ -104,7 +104,7 @@
         "/api/media/{short}": {
             "get": {
                 "consumes": [
-                    "multipart/form-data"
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
@@ -278,6 +278,48 @@
             }
         },
         "/api/user/media/{shortId}": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "UpdateMedia",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/router.UpdateMediaInfo"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "shortId",
+                        "name": "shortId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
             "delete": {
                 "consumes": [
                     "application/json"
@@ -385,6 +427,48 @@
             }
         },
         "/api/user/short/{shortId}": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "UpdateShort",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/router.UpdateShortInfo"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "shortId",
+                        "name": "shortId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
             "delete": {
                 "consumes": [
                     "application/json"
@@ -486,6 +570,36 @@
             "properties": {
                 "leadUrl": {
                     "type": "string"
+                }
+            }
+        },
+        "router.UpdateMediaInfo": {
+            "type": "object",
+            "required": [
+                "expirationTime"
+            ],
+            "properties": {
+                "expirationTime": {
+                    "type": "integer",
+                    "maximum": 86400,
+                    "minimum": 1
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 15
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 10
+                }
+            }
+        },
+        "router.UpdateShortInfo": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "maxLength": 15
                 }
             }
         }
